# RPillPal

./: README.md
.github/workflows/: ci.yml
Firmware/: .cproject  .directory  .project  LinkerScript.ld
Firmware/RPillPal_V1/: RPillPal_V1.ino
Firmware/RPillPal_V2_Internet_Test/: RPillPal_V2_Internet_Test.ino
Firmware/inc/: init.h  stm32f7xx_hal_conf.h
Firmware/src/: init.c  main.c
back-end/: .env  Cargo.toml
back-end/src/: error.rs  logging.rs  main.rs  util.rs
back-end/src/db/: device.rs  mod.rs  user.rs
back-end/src/web/services/: endpoints.rs  fetch.rs  mod.rs  not_found.rs
front-end/: package-lock.json  package.json
front-end/src/: app.html
front-end/src/routes/: +page.svelte  store.js
