[package]
name = "back-end"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.1"
actix-cors = "0.6.4"
actix-web = { version = "4.4.0", features = ["rustls"] }
actix-files = "0.6.2"
actix-identity = "0.6.0"
anyhow = "1.0.75"

# Derive traits like Error and Display
derive_more = "0.99.17"

handlebars = "4.4.0"
mongodb = { version = "2.7.1", features = ["tracing-unstable"] }

serde = { version = "1.0.190", features = ["derive"] }
serde_json = "1.0.108"

tokio = { version = "1.33.0", features = ["full"] }
tokio-util = { version = "0.7.10", features = ["full"] }
bson = "2.7.0"
futures = "0.3.29"
serde_repr = "0.1.17"
chrono = "0.4.31"

tracing-actix-web = { version = "0.7.8", features = [] }
tracing-subscriber = { version = "0.3.17", features = [
	"env-filter",
	"registry",
	"std",
	"tracing",
	"tracing-log",
] }
tracing = "0.1.40"
tracing-log = { version = "0.2.0", features = ["std", "log-tracer"] }
tracing-bunyan-formatter = "0.3.9"
