[package]
name = "back-end"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.1"
actix-web = { version = "4.4.0", features = ["rustls"] }
actix-files = "0.6.2"
actix-identity = "0.6.0"
anyhow = "1.0.75"
bson = "2.7.0"
chrono = "0.4.31"
cpu-monitor = "0.1.1"
derive_more = "0.99.17"
dotenv = "0.15.0"
env_logger = "0.10.0"
handlebars = "4.4.0"
mongodb = "2.7.1"
reqwest = "0.11.22"

serde = { version = "1.0.190", features = ["derive"] }
serde_json = "1.0.108"
serde_repr = "0.1.17"

tokio = { version = "1.33.0", features = ["full"] }
tokio-util = { version = "0.7.10", features = ["full"] }
futures = "0.3.29"

tracing-actix-web = { version = "0.7.8", features = [] }
tracing-subscriber = { version = "0.3.17", features = [
	"env-filter",
	"registry",
	"std",
	"tracing",
	"tracing-log",
] }
tracing = "0.1.40"
tracing-log = { version = "0.2.0", features = ["std", "log-tracer"] }
tracing-bunyan-formatter = "0.3.9"

tracing-honeycomb = { git = "https://github.com/elkowar/tracing-honeycomb", branch = "latest" }
libhoney-rust = { git = "https://github.com/nlopes/libhoney-rust", rev = "f64def9dad3523866be429866fa2821d8b0e21ad" }
actix-cors = "0.6.4"

[profile.optimization]
inherits = "release"
strip = true         # Automatically strip symbols from the binary.
lto = true           # Link-time optimization.
opt-level = 3        # Optimize for speed.
codegen-units = 1    # Maximum size reduction optimizations.
